dist/thelounge-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thelounge
  labels:
    name: thelounge
