dist/thelounge-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: thelounge-service
  namespace: thelounge
spec:
  type: LoadBalancer
  selector:
    app: thelounge
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9000
