dist/thelounge-ingress.yaml
##################################################################################################
# Ingress
##################################################################################################
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thelounge-ingress
spec:
  rules:
    - host: k8s.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: thelounge-service
                port:
                  number: 80
